--- a/Telomere_Math_Models/Suda_2002_Telomere_Modeling.Rmd
+++ b/Telomere_Math_Models/Suda_2002_Telomere_Modeling.Rmd
@@ -78,7 +78,7 @@ chromosome_lengths <- c(246, 202, 193, 184, 173, 160, 146, 125, 110, 103, 100, 9
 #all_telomere_lengths <- c(5681, 5681, 4987, 5018, 4589, 4302, 4127, 3922, 3708,3708,3708,3708, 4045, 3624, 3460, 3109, 3077, 3007, 2750, 2913, 2735, 2806)
 telomere_lengths <- c(5681, 4987, 5018, 4589, 4302, 4127, 3922, 3708, 4045, 3624, 3460, 3109, 3077, 3007, 2750, 2913, 2735, 2806)
 # these should be 18 long cause that's how many rows Suda 2002 has
-length(all_telomere_lengths)
+#length(all_telomere_lengths)
 length(chromosome_lengths)
 length(telomere_lengths)
 mean(telomere_lengths)
@@ -725,7 +725,7 @@ text_of_PQ_numbers <- newList$text
 
 
 ```{r}
-barplot(as.numeric(list_of_PQ_ratios), log="y", ylim=c(0.1,10))
+barplot(as.numeric(list_of_PQ_ratios), log="y", ylim=c(0.1,10), main="ALT Telomere P to Q Ratio", ylab="P/Q (AU)")
 abline(h=1)
 ```
 
@@ -794,7 +794,7 @@ play_ALT_telomere_lengths <- ALT_chromosome_lengths
 dividing <- TRUE
 divisions <- 0
 while(dividing) {
-  barplot(as.numeric(play_ALT_telomere_lengths), las=2, main="ALT+ Telomere Lengths for Chromosomes", ylim=c(0,50000))
+  barplot(as.numeric(play_ALT_telomere_lengths), las=2, main=paste("ALT+ Telomere Lengths After ", divisions, "Divisions"), ylim=c(0,50000))
   abline(h=5000, col="red", lwd=3)
   abline(h=3000, col="black", lwd=3)
   play_ALT_telomere_lengths <- as.numeric(play_ALT_telomere_lengths) - 175
@@ -874,24 +874,48 @@ while(dividing) {
 # how many population doublings?
 # LB2870-MEL/TEL + (p21), LB2687-MEL/TEL + (p25), and in LB2901-MEL (p16) and LB3129-MELB (p21)
 # 3129 mela p22 crisis, 3129 melb p26 crisis, lb2901 mel p25 crisis
+viceconte_telomere_lengths <- list()
+viceconte_number_cells <- list()
+no_telomerase_lengths <- list()
 EST_telomerase_start_length <- 4000
+no_telomerase_start_length <- 4000
 current_length <- EST_telomerase_start_length
+current_no_telomerase_length <- no_telomerase_start_length
+current_no_telomerase_division_number <- 0
 dividing <- TRUE
 division_number <- 0
 cell_number <- 1
+no_telomerase_number_cells <- 1
 while(dividing) {
+  viceconte_telomere_lengths[division_number] <- current_length
+  viceconte_number_cells[division_number] <- cell_number
+  
   # telomere shortening
+  while(current_no_telomerase_length > 3000){
+    no_telomerase_lengths[current_no_telomerase_division_number] <- current_no_telomerase_length
+    current_no_telomerase_length <- current_no_telomerase_length -50
+    no_telomerase_number_cells <- no_telomerase_number_cells * 2
+    current_no_telomerase_division_number <- current_no_telomerase_division_number + 1
+  }
+  
   current_length <- current_length - 50
   # low-level telomerase
-  current_length <- current_length + 10
+  current_length <- current_length + 25
   if(current_length < 3000) {
     dividing <- FALSE
   }
   division_number <- division_number + 1
   cell_number <- cell_number * 2
+  
 }
 print(division_number)
 print(cell_number)
+plot(as.numeric(viceconte_telomere_lengths), col="red", type="l", pch=19, lty=2, xlab="Division Number", ylab="Telomere Length (bp)", main="Telomere Shortening is Slowed with Ever Shorter Telomeres Activity")
+lines(as.numeric(no_telomerase_lengths), col="green", type="l", pch=19, lty=2)
+legend(20, 3800, legend=c("Ever Shorter Telomeres", "Normal Telomere Shortening"), col=c("red", "green"), lty=2:2, cex=0.8)
+#plot(as.numeric(no_telomerase_lengths))
+#plot(as.numeric(viceconte_number_cells))
+# plot(as.numeric(no_telomerase_number_cells))
 ```
 
 
@@ -905,6 +929,7 @@ current_length <- EST_long_start_length
 dividing <- TRUE
 division_number <- 0
 cell_number <- 1
+cell_number_list <- list()
 while(dividing) {
   # telomere shortening
   current_length <- current_length - 50
@@ -913,9 +938,11 @@ while(dividing) {
   }
   division_number <- division_number + 1
   cell_number <- cell_number * 2
+  cell_number_list[division_number] <- cell_number
 }
 print(division_number)
 print(cell_number)
+plot(as.numeric(cell_number_list), xlim=c(1, 21), ylim=c(0, 1250000), col="red", type="p", pch=19, lty=2, xlab="Division Number", ylab="Cell Number", main="Ever Shorter Telomere Cells Can Divide Extensively")
 ```
 
 
